--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,12 @@
 # Use solution folders to organize projects
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Make sure DLL and EXE targets go to the same directory.
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>) # Output directory for static lib (.LIB)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>) # Output directory for shared lib (.DLL)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>) # Output directory for executables (.EXE)
+set(CMAKE_BUILD_RPATH "$ORIGIN")
 
 project( DialogueBox LANGUAGES CXX )
 
 # Enable to build shared libraries.
 option(BUILD_SHARED_LIBS "Create shared libraries." OFF)
-
-if(MSVC)
-	# Enable multithreaded builds
-    add_compile_options(/MP)
-	# Remove the always defined _WINDOWS flag
-	# CPP
-	string (REPLACE "/D_WINDOWS" "" CMAKE_CUSTOM_CPP_FLAGS ${CMAKE_CXX_FLAGS})
-	string (REPLACE "/DWIN32" "" CMAKE_CUSTOM_CPP_FLAGS ${CMAKE_CUSTOM_CPP_FLAGS}) 
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CUSTOM_CPP_FLAGS}" CACHE STRING "" FORCE)
-endif()
 
 project ("DialogueBox")
 
