--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,9 +1,7 @@
 ## FETCH CONTENTS
-
-# Spdlog
-
 include(FetchContent)
 
+# Spdlog
 FetchContent_Declare(
         SpdLog
         GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -11,17 +9,31 @@ FetchContent_Declare(
         GIT_SHALLOW TRUE
         GIT_PROGRESS TRUE
 )
-
 FetchContent_MakeAvailable(SpdLog)
+
 
 ## SUB DIRECTORIES
 
+# DirectXTex
 add_subdirectory("DirectXTex")
+
+# GLFW
+find_package( OpenGL REQUIRED )
+
+include_directories( ${OPENGL_INCLUDE_DIRS} )
 
 set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
 set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
+set( GLAD_GL "" )
 
 add_subdirectory("glfw")
 
+option( GLFW-CMAKE-STARTER-USE-GLFW-GLAD "Use GLAD from GLFW" ON )
+
+if( GLFW-CMAKE-STARTER-USE-GLFW-GLAD )
+    include_directories("${GLFW_SOURCE_DIR}/deps")
+    set( GLAD_GL "${GLFW_SOURCE_DIR}/deps/glad/gl.h" )
+endif()
+
 add_library(External INTERFACE)
-target_link_libraries(External INTERFACE DirectXTex glfw spdlog::spdlog)
+target_link_libraries(External INTERFACE DirectXTex glfw ${OPENGL_LIBRARIES} spdlog::spdlog)
