[ADDED] Support for vcpkg (does not build correctly yet)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,5 +96,9 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp"
-    }
+    },
+    "cmake.configureSettings": {
+        "CMAKE_TOOLCHAIN_FILE" : "some/path/vcpkg/scripts/buildsystems/vcpkg.cmake",
+        "VCPKG_TARGET_TRIPLET": "x64-windows"
+  }
 }
