--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,7 @@
         "xutility": "cpp"
     },
     "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE" : "some/path/vcpkg/scripts/buildsystems/vcpkg.cmake",
+        "CMAKE_TOOLCHAIN_FILE" : "%VCPKG_ROOT%/scripts/buildsystems/vcpkg.cmake",
         "VCPKG_TARGET_TRIPLET": "x64-windows"
-  }
+    }
 }
