--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ build
 vcpkg_installed
 *.zip
 
+# vcpkg build artifacts
+/vcpkg/buildtrees/
+/vcpkg/packages/
+/vcpkg/installed/
+/vcpkg/downloads/
+/vcpkg/vcpkg
+
 ### C++ ###
 # Prerequisites
 *.d
