--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,7 +95,9 @@
         "xmemory": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "complex": "cpp",
+        "expected": "cpp"
     },
     "cmake.configureSettings": {
         "CMAKE_TOOLCHAIN_FILE" : "%VCPKG_ROOT%/scripts/buildsystems/vcpkg.cmake",
